Fixed Integer.valueOf JDK 1.4 compatibility issue.